<resources>
    <string name="app_name">Super App 3.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Nova versão do Super App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_noticias">Notícias</string>
    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_lista_tarefas">Lista de Tarefas</string>
    <string name="menu_lista_livros">Lista de Livros</string>
    <string name="menu_media">Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="artigo_forest">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam venenatis efficitur blandit. Curabitur luctus vitae purus sit amet dictum. Cras hendrerit dignissim ligula, facilisis volutpat ante sagittis non. In rutrum mi vitae ligula euismod, id porttitor justo gravida. Suspendisse blandit nec odio sed fringilla. Aenean id blandit quam, id mattis nibh. Proin quis nisl ut orci condimentum pretium nec vitae odio. Aenean facilisis diam ipsum, id commodo augue sollicitudin quis. Sed nec eros sed dolor mattis scelerisque eu eget lectus. Donec efficitur massa vel accumsan rhoncus. Duis sodales sapien orci, vel interdum lectus facilisis eu. Sed ante enim, auctor non ullamcorper eu, accumsan in est. In malesuada, tellus sagittis luctus finibus, eros odio cursus elit, non placerat lacus enim vel nisl.
    </string>
    <string name="artigo_garage">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam venenatis efficitur blandit. Curabitur luctus vitae purus sit amet dictum. Cras hendrerit dignissim ligula, facilisis volutpat ante sagittis non. In rutrum mi vitae ligula euismod, id porttitor justo gravida. Suspendisse blandit nec odio sed fringilla. Aenean id blandit quam, id mattis nibh. Proin quis nisl ut orci condimentum pretium nec vitae odio. Aenean facilisis diam ipsum, id commodo augue sollicitudin quis. Sed nec eros sed dolor mattis scelerisque eu eget lectus. Donec efficitur massa vel accumsan rhoncus. Duis sodales sapien orci, vel interdum lectus facilisis eu. Sed ante enim, auctor non ullamcorper eu, accumsan in est. In malesuada, tellus sagittis luctus finibus, eros odio cursus elit, non placerat lacus enim vel nisl.
    </string>
    <string name="artigo_beach">
        Vivamus cursus mauris eu ipsum scelerisque, non venenatis nunc accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Aliquam sit amet quam tempus, elementum sapien at, imperdiet diam. Fusce tempor sagittis euismod. In venenatis purus vitae porttitor facilisis. Sed sit amet pretium velit, sed ornare purus. Sed sed nunc quis dui sodales convallis vel vel neque. Vivamus auctor tempor tortor ut porttitor. Quisque vulputate ex lacus, tempor sagittis nisi tempus vel. In dapibus finibus facilisis. Praesent ut sem in erat ornare rhoncus a eu nisl. Pellentesque suscipit felis purus, sed vehicula nulla vehicula quis. Donec sed elit mattis, varius urna nec, tristique massa.

        Cras non vestibulum massa, in sodales dolor. Cras non mattis enim. Sed id risus posuere, placerat purus a, convallis ligula. Etiam vel iaculis elit. Morbi posuere dignissim venenatis. Etiam eleifend facilisis diam, ac fringilla erat imperdiet eu. Aliquam in lacus tristique, ultrices dui et, egestas justo.

        Nam lacinia id arcu eu pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum hendrerit leo eu accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer arcu odio, bibendum vel ligula in, iaculis aliquet erat. Etiam at lectus dapibus, eleifend eros non, dignissim ligula. Nam volutpat velit efficitur sapien tristique venenatis. Nulla ipsum ipsum, vestibulum vitae purus vel, sagittis convallis ipsum. Ut condimentum venenatis neque nec cursus. In tincidunt, ipsum eu pretium porttitor, orci eros dignissim enim, sed tempor nisl mauris sed enim. Donec id sapien eu leo suscipit auctor eu a nisi. Vestibulum nec felis augue. Vestibulum facilisis neque et varius maximus. Aenean aliquam vehicula nisi, vitae sodales felis ultricies tristique. Morbi ut mattis lectus, tempus porta diam. Suspendisse pellentesque ex vehicula orci vestibulum ultricies.
    </string>
    <string name="artigo_library">
        Cras non vestibulum massa, in sodales dolor. Cras non mattis enim. Sed id risus posuere, placerat purus a, convallis ligula. Etiam vel iaculis elit. Morbi posuere dignissim venenatis. Etiam eleifend facilisis diam, ac fringilla erat imperdiet eu. Aliquam in lacus tristique, ultrices dui et, egestas justo.
    </string>
    <string name="artigo_computers">
        Cras non vestibulum massa, in sodales dolor. Cras non mattis enim. Sed id risus posuere, placerat purus a, convallis ligula. Etiam vel iaculis elit. Morbi posuere dignissim venenatis. Etiam eleifend facilisis diam, ac fringilla erat imperdiet eu. Aliquam in lacus tristique, ultrices dui et, egestas justo.

        Nam lacinia id arcu eu pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum hendrerit leo eu accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer arcu odio, bibendum vel ligula in, iaculis aliquet erat. Etiam at lectus dapibus, eleifend eros non, dignissim ligula. Nam volutpat velit efficitur sapien tristique venenatis. Nulla ipsum ipsum, vestibulum vitae purus vel, sagittis convallis ipsum. Ut condimentum venenatis neque nec cursus. In tincidunt, ipsum eu pretium porttitor, orci eros dignissim enim, sed tempor nisl mauris sed enim. Donec id sapien eu leo suscipit auctor eu a nisi. Vestibulum nec felis augue. Vestibulum facilisis neque et varius maximus. Aenean aliquam vehicula nisi, vitae sodales felis ultricies tristique. Morbi ut mattis lectus, tempus porta diam. Suspendisse pellentesque ex vehicula orci vestibulum ultricies.
    </string>
    <string name="artigo_city">
        Vivamus cursus mauris eu ipsum scelerisque, non venenatis nunc accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Aliquam sit amet quam tempus, elementum sapien at, imperdiet diam. Fusce tempor sagittis euismod. In venenatis purus vitae porttitor facilisis. Sed sit amet pretium velit, sed ornare purus. Sed sed nunc quis dui sodales convallis vel vel neque. Vivamus auctor tempor tortor ut porttitor. Quisque vulputate ex lacus, tempor sagittis nisi tempus vel. In dapibus finibus facilisis. Praesent ut sem in erat ornare rhoncus a eu nisl. Pellentesque suscipit felis purus, sed vehicula nulla vehicula quis. Donec sed elit mattis, varius urna nec, tristique massa.
    </string>
    <string name="artigo_ads">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam venenatis efficitur blandit. Curabitur luctus vitae purus sit amet dictum. Cras hendrerit dignissim ligula, facilisis volutpat ante sagittis non. In rutrum mi vitae ligula euismod, id porttitor justo gravida. Suspendisse blandit nec odio sed fringilla. Aenean id blandit quam, id mattis nibh. Proin quis nisl ut orci condimentum pretium nec vitae odio. Aenean facilisis diam ipsum, id commodo augue sollicitudin quis. Sed nec eros sed dolor mattis scelerisque eu eget lectus. Donec efficitur massa vel accumsan rhoncus. Duis sodales sapien orci, vel interdum lectus facilisis eu. Sed ante enim, auctor non ullamcorper eu, accumsan in est. In malesuada, tellus sagittis luctus finibus, eros odio cursus elit, non placerat lacus enim vel nisl.
    </string>
    <string name="artigo_hospital">
        Cras non vestibulum massa, in sodales dolor. Cras non mattis enim. Sed id risus posuere, placerat purus a, convallis ligula. Etiam vel iaculis elit. Morbi posuere dignissim venenatis. Etiam eleifend facilisis diam, ac fringilla erat imperdiet eu. Aliquam in lacus tristique, ultrices dui et, egestas justo.

        Nam lacinia id arcu eu pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum hendrerit leo eu accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer arcu odio, bibendum vel ligula in, iaculis aliquet erat. Etiam at lectus dapibus, eleifend eros non, dignissim ligula. Nam volutpat velit efficitur sapien tristique venenatis. Nulla ipsum ipsum, vestibulum vitae purus vel, sagittis convallis ipsum. Ut condimentum venenatis neque nec cursus. In tincidunt, ipsum eu pretium porttitor, orci eros dignissim enim, sed tempor nisl mauris sed enim. Donec id sapien eu leo suscipit auctor eu a nisi. Vestibulum nec felis augue. Vestibulum facilisis neque et varius maximus. Aenean aliquam vehicula nisi, vitae sodales felis ultricies tristique. Morbi ut mattis lectus, tempus porta diam. Suspendisse pellentesque ex vehicula orci vestibulum ultricies.
    </string>
    <string name="artigo_grocery_store">
        Cras non vestibulum massa, in sodales dolor. Cras non mattis enim. Sed id risus posuere, placerat purus a, convallis ligula. Etiam vel iaculis elit. Morbi posuere dignissim venenatis. Etiam eleifend facilisis diam, ac fringilla erat imperdiet eu. Aliquam in lacus tristique, ultrices dui et, egestas justo.
    </string>
</resources>